# moodl-rs

./: .gitignore  Cargo.toml  LICENSE  README.org  flake.nix  moodl-rs.nix  shell.nix  toolchain.toml
.cargo/: config.toml
src/: config.toml  db.rs  downloader.rs  handlers.rs  main.rs  parser.rs  process_result.rs  utils.rs  ws.rs
src/commands/: command.rs  download.rs  fetch.rs  init.rs  mod.rs  parse.rs
src/models/: assignments.rs  configs.rs  course.rs  course_content.rs  course_details.rs  course_grades.rs  course_section.rs  courses.rs  grades.rs  mod.rs  pages.rs  recents.rs  response.rs  scorm.rs  secrets.rs  user.rs
src/ui/: mod.rs  parser.rs  prompt.rs  tui.rs
src/ws/: api_config.rs  mod.rs
