[package]
name = "moodl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "moodl-rs"
path = "src/main.rs"


[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.185"
serde_derive = "1.0.185"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
scraper ="0.17.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
ratatui = { version = "0.22.0", features = ["all-widgets"]}
chrono = "0.4.26"
html2md = "0.2.14"
termimad = "0.25"
regex = "1.5"

[dependencies.crossterm]
version = "0.26"
features = ["event-stream"]

[dev-dependencies]
mockito = "1.1.0"
