[package]
name = "moodl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "moodl-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.26"
html2md = "0.2.14"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
scraper ="0.17.1"
serde = "1.0.185"
serde_derive = "1.0.185"
serde_json = "1.0"
termimad = "0.25"
tokio = { version = "1", features = ["full"] }
toml = "0.7.6"

[dependencies.crossterm]
version = "0.26"
features = ["event-stream"]
