[package]
name = "moodl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "moodl-rs"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.73"
chrono = "0.4.26"
config = "0.13.3"
eyre = "0.6.8"
fern = "0.6.2"
futures-util = "0.3.14"
html2md = "0.2.14"
indicatif = "0.15.0"
log = "0.4.20"
regex = "1.5"
reqwest = { version = "0.11.3", features = ["json", "stream"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = "1.0.185"
serde_derive = "1.0.185"
serde_json = "1.0"
termimad = "0.25"
tokio = { version = "1", features = ["full"] }
toml = "0.7.6"

[dependencies.crossterm]
version = "0.26"
features = ["event-stream"]
